Update to catch up with 1.18